--- a/my-site/cv.tex
+++ b/my-site/cv.tex
@@ -53,7 +53,7 @@
   & \textbf{Cornell University} \\
   & Ph.D. in Programming Languages, Expected May 2023 \\
   % & M.Sc. in Computer Science, December 2020 \\
-  & \textbf{Thesis Topic}: Formal Methods for Dataplane Programs \\
+  & \textbf{Thesis Topic}: Robust Interfaces in Software Defined Networks \\
   & \textit{2019 NSF GRFP Fellow} \\
   \\
 
@@ -74,8 +74,8 @@
   % & \textit{In Review, PLDI 24} \\
   & \\
 
-  & \textbf{A Database-Theoretic Foundation for Networks} \\
-  & Eric Hayden Campbell, Christoph Koch, Nate Foster \\
+  & \textbf{Synthesis of Control Plane Maps} \\
+  & Eric Hayden Campbell, Nate Foster \\
   % & \textit{In Submission} \\
   & \\
 
@@ -152,9 +152,8 @@
 
   \Large{Outreach}
   & \textbf{Jane Street AMP} \\
-  & Advanced CS Instructor \& Course Design, \emph{CS3}, 2022-2023 \\
+  & Advanced CS Instruction \& Course Design, \emph{CS3}, Summers 2022 \& 2023 \\
   \\
-
   & \textbf{4H Career Explorations Conference} \\
   & Workshop Designer \& Leader, \emph{Networking and Security}, 2018-2022 \\
   & \\
@@ -180,7 +179,7 @@
   &\\
 
   \Large{Guest Lectures}
-  & \textbf{Responsible AI}. Enrepreneurship: Growth Hacking. \textit{Hult Business}. June 2023\\
+  & \textbf{Responsible AI}. Entrepreneurship: Growth Hacking. \textit{Hult Business}. June 2023\\
   & \textbf{SafeP4}. Network Programming. \textit{Cornell CS}. Oct 2019 \\
   & \textbf{Decidability of }\textsc{Kat}. Intro To Kleene Algebra. \textit{Cornell CS}. March 2019 \\
   & \textbf{Responsibilities for Correctness}. FWS: Ethics. \textit{Cornell Philosophy}. Feb 2019\\
