--- a/cv.tex
+++ b/cv.tex
@@ -53,7 +53,7 @@
   & \textbf{Cornell University} \\
   & Ph.D. in Programming Languages, Expected May 2023 \\
   % & M.Sc. in Computer Science, December 2020 \\
-  & \textbf{Thesis Topic}: Formal Methods for Dataplane Programs \\
+  & \textbf{Thesis Topic}: Robust Interfaces in Software Defined Networks \\
   & \textit{2019 NSF GRFP Fellow} \\
   \\
 
@@ -74,8 +74,8 @@
   % & \textit{In Review, PLDI 24} \\
   & \\
 
-  & \textbf{A Database-Theoretic Foundation for Networks} \\
-  & Eric Hayden Campbell, Christoph Koch, Nate Foster \\
+  & \textbf{Synthesis of Control Plane Maps} \\
+  & Eric Hayden Campbell, Nate Foster \\
   % & \textit{In Submission} \\
   & \\
 
