--- a/resume.tex
+++ b/resume.tex
@@ -199,6 +199,18 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \section{Selected Publications}
 
 
+\runsubsection{Computing Precise Control Interface Specifications}
+\descript{<b>Eric Hayden Campbell</b>, Hossein Hojjat, Nate Foster}
+
+
+\location{OOPSLA|To Appear, Oct 2024}
+
+
+Capisce computes control plane interface specifications from data plane programs
+\sectionsep
+
+
+
 \runsubsection{P4Cub: A Little Language for Big Routers}
 \descript{Rudy Peterson, <b>Eric Hayden Campbell</b>, John Chen, Natalie Isak, Calvin Shyu, Ryan Doenges, Parisa Ataei, and Nate Foster}
 
