--- a/my-site/papers/2019-01-15-safep4.markdown
+++ b/my-site/papers/2019-01-15-safep4.markdown
@@ -1,6 +1,6 @@
 ---
 title: "How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4"
-authors: Matthias Eichholz, <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini
+authors: Matthias Eichholz + <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini
 venue: ECOOP
 month: July 2019 
 pdf: "/pdfs/safep4.pdf"
