--- a/cv.tex
+++ b/cv.tex
@@ -51,12 +51,11 @@
 \begin{tabular}{@{} l l}
   \Large{Education} 
   & \textbf{Cornell University} \\
-  & Ph.D. in Programming Languages, Expected May 2023 \\
+  & Ph.D. in Programming Languages, Expected Dec 2024 \\
   % & M.Sc. in Computer Science, December 2020 \\
   & \textbf{Thesis Topic}: Robust Interfaces in Software Defined Networks \\
   & \textit{2019 NSF GRFP Fellow} \\
   \\
-
 
   & \textbf{Pomona College} \\
   & B.A.s in Computer Science \& Mathematics, May 2017 \\
@@ -69,19 +68,21 @@
   % & Concentration in Mathematics \\
 
   \Large{Current Projects}
-  & \textbf{Weakest Inference of Control Plane Specifications} \\
-  & Eric Hayden Campbell, Hossein Hojjat Nate Foster \\
-  % & \textit{In Review, PLDI 24} \\
-  & \\
-
-  & \textbf{Synthesis of Control Plane Maps} \\
+  & \textbf{Relational Hoare Lenses}\\
   & Eric Hayden Campbell, Nate Foster \\
+  & \textbf{Synthesis of Control Plane Maps} \\
+  & Eric Hayden Campbell, Nate Foster, Aditya Akella, Isil Dillig \\
   % & \textit{In Submission} \\
   & \\
 
   \Large{Refereed}
-  & \textbf{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}\\
+  & \textbf{Computing Precise Control Interface Specifications} \\
   \Large{Publications}
+  & Eric Hayden Campbell, Hossein Hojjat, Nate Foster \\
+  & \textit{OOPSLA 2024} \\
+  & \\
+
+  & \textbf{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}\\
   & Eric Hayden Campbell, Bill Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, \\ & Vignesh Ramamurthy, Hossein Hojjat, Robert  Soul\'{e}, Ruzica Piskac,  and  Nate Foster\\
   & \textit{NSDI 2021} \\
   &\\
