--- a/resume.tex
+++ b/resume.tex
@@ -272,7 +272,7 @@ Extend Kleene Algebra with Tests to model epistemic semantics of modal verbs in 
 
 
 \runsubsection{How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4}
-\descript{Matthias Eichholz, <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini}
+\descript{Matthias Eichholz + <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini}
 
 
 \location{ECOOP|July 2019}
