--- a/my-site/cv.tex
+++ b/my-site/cv.tex
@@ -43,10 +43,12 @@
   %   2515 Speedway, Austin, TX\hspace{0.75em} 78712 \\
   % \end{tabular}
 \begin{tabular}{l l}
- PhD Candidate, Cornell University    & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
- Department of Computer and Information Science    & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
- 430 Gates Hall            & \\
- Ithaca, NY\hspace{.75em}14853, U.S.A. \\
+  Postctoral Research Fellow, UT Austin
+  & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
+  Department of Computer Science    
+  & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
+  317 Speedway \\
+  Austin, TX\hspace{0.75em}78712, U.S.A.
 \end{tabular}
 \end{center}
 
@@ -141,75 +143,78 @@
   \Large{Industry} \\[0.5em]
   \begin{tabular}{>{\qquad}l}
   \textbf{Fujitsu Laboratories of America} \\
-  Research Intern, Property Inference for Legacy Networks \\
-  \textit{Sunnyvale, CA}. May 2018 - Aug 2018 \\
+  \quad Research Intern, Property Inference for BGP Networks \\
+  \quad \textit{Sunnyvale, CA}. May 2018 - Aug 2018 \\
   \\
   \textbf{Originate, Inc} \\
-  Software Engineering Intern, Web Development \\
-  \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
+  \quad Software Engineering Intern, Web Development \\
+  \quad \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
   \\
   \textbf{Gladly, Inc} \\
-  Software Engineering Intern, Web Development \\
-  \textit{Palo Alto, CA}. May 2014 - Aug 2014 
+  \quad Software Engineering Intern, Web Development \\
+  \quad \textit{Palo Alto, CA}. May 2014 - Aug 2014 
   \end{tabular}\\ \\
 
   \Large{Invited Talks} \\[0.5em]
   \begin{tabular}{>{\qquad}l}
+  \textbf{Computing Precise Control Invariant Specifications} \\
+  \quad \textit{OOPSLA}. Oct 24.\\
+  \\
   \textbf{Avenir: Managing Data Plane Diversity with Control Plane Synthesis} \\
-    \tabitem \textit{VLCS Seminar}. EPFL. Oct 23 \\
-    \tabitem \textit{Tech Talk}. Intel. May 2022 \\
-    \tabitem \textit{Tech Talk}. Intel. March 2022 \\
-    \tabitem \textit{Computer Aided Verification}. P4 Verification Workshop. July 2021 \\
-    \tabitem \textit{Simons Institute}. Synthesis of Models and Systems. May 2021 \\
-    \tabitem \textit{Networked Systems Design \& Implementation}. April 2021 \\
-    \tabitem \textit{Synthesis Discussion Group}. Yale University.  September 2020\\
-    \tabitem \textit{P4 Expert Roundtable Series: How is P4 Evolving as a language?} Virtual. April 2020 \\
+  \quad \textit{VLCS Seminar}. EPFL. Oct 23 \\
+  \quad \textit{Tech Talk}. Intel. May 2022 \\
+  \quad \textit{Tech Talk}. Intel. March 2022 \\
+  \quad \textit{P4 Verification Workshop}. CAV. July 2021 \\
+  \quad \textit{Simons Institute}. Synthesis of Models and Systems. May 2021 \\
+  \quad \textit{NSDI}. April 2021 \\
+  \quad \textit{Synthesis Discussion Group}. Yale University.  September 2020\\
+  \quad \textit{P4 Expert Roundtable Series: How is P4 Evolving as a language?} Virtual. April 2020 \\
   % & \textbf{Computational Ethics: Responsibilities for Correctness} \\
   % & \textbullet \textit{Cornell University}. \textit{Guest Lecturer: Philosophy}. February 2019 \\
   \\
   \textbf{Epistemic Semantics in Guarded String Models} \\
-  \tabitem \textit{Scientific Computing in Linguistics}. February 2021\\
+  \quad \textit{Society for Computation in Linguistics}. February 2021\\
   \end{tabular}
   \\\\
 
   \Large{Outreach}\\[0.5em]
   \begin{tabular}{>{\qquad}l}
   \textbf{4H Career Explorations Conference} \\
-  Workshop Designer \& Leader, \emph{Networking and Security}, 2018-2022 \\
+  \quad Workshop Designer \& Leader, \emph{Networking and Security}, 2018-2022 \\
   \\
   \textbf{Expand Your Horizons Conference} \\
-  Workshop Leader, \emph{Googling With Paper Airplanes}, 2017-2019 \\
+  \quad Workshop Leader, \emph{Googling With Paper Airplanes}, 2017-2019 \\
   \\
   \textbf{Originate, Inc} \\
-  Counselor, \emph{Approachable Web Design}, 2015 \\
+  \quad Counselor, \emph{Approachable Web Design}, 2015 \\
   \end{tabular}
   \\\\
 
   \Large{Teaching}\\[0.5em]  
   \begin{tabular}{>{\qquad}l}
   \textbf{Academy of Math and Programming, Jane Street Capital} \\
-  Advanced Instructor, CS3, Summer 2023, \textit{Bespoke course design} \\
-  Instructor, CS3, Summer 2022, \textit{Bespoke course design}  \\
+  \quad Advanced Instructor, CS3, Summer 2023, \textit{Bespoke course design} \\
+  \quad Instructor, CS3, Summer 2022, \textit{Bespoke course design}  \\
   \\
   \textbf{Computer Science Department, Cornell University} \\
-  TA, OOP and Data Structures, Spring 2018, \textit{Teaching Excellence Award} \\
-  TA, OOP and Data Structures, Fall 2017 \\
+  \quad TA, OOP and Data Structures, Spring 2018, \textit{Teaching Excellence Award} \\
+  \quad TA, OOP and Data Structures, Fall 2017 \\
   \\
   
   \textbf{Computer Science Department, Pomona College} \\
-  TA, Databases Systems, Spring 2017 \\
-  TA, Programming Languages, Fall 2016 \\
-  Head TA, Intro to CS, Spring 2016 \\
-  TA, Intro to CS, Fall 2015 \\
+  \quad TA, Databases Systems, Spring 2017 \\
+  \quad TA, Programming Languages, Fall 2016 \\
+  \quad Head TA, Introduction to Computer Science, Spring 2016 \\
+  \quad TA, Introduction to to Computer Science, Fall 2015 \\
   \end{tabular}\\\\
 
-  \Large{Guest Lectures} \\[0.5em]
-  \begin{tabular}{>{\qquad}l}
-  \textbf{Responsible AI}. Entrepreneurship: Growth Hacking. \textit{Hult Business}. June 2023\\
-  \textbf{SafeP4}. Network Programming. \textit{Cornell CS}. Oct 2019 \\
-  \textbf{Decidability of }\textsc{Kat}. Intro To Kleene Algebra. \textit{Cornell CS}. March 2019 \\
-  \textbf{Responsibilities for Correctness}. FWS: Ethics. \textit{Cornell Philosophy}. Feb 2019\\
-  \end{tabular}
+  % \Large{Guest Lectures} \\[0.5em]
+  % \begin{tabular}{>{\qquad}l}
+  % \textbf{Responsible AI}. Entrepreneurship: Growth Hacking. \textit{Hult Business}. June 2023\\
+  % \textbf{SafeP4}. Network Programming. \textit{Cornell CS}. Oct 2019 \\
+  % \textbf{Decidability of }\textsc{Kat}. Intro To Kleene Algebra. \textit{Cornell CS}. March 2019 \\
+  % \textbf{Responsibilities for Correctness}. FWS: Ethics. \textit{Cornell Philosophy}. Feb 2019\\
+  % \end{tabular}
 \end{tabular}
 \end{document}
 
