--- a/cv.tex
+++ b/cv.tex
@@ -43,10 +43,12 @@
   %   2515 Speedway, Austin, TX\hspace{0.75em} 78712 \\
   % \end{tabular}
 \begin{tabular}{l l}
- PhD Candidate, Cornell University    & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
- Department of Computer and Information Science    & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
- 430 Gates Hall            & \\
- Ithaca, NY\hspace{.75em}14853, U.S.A. \\
+  Postctoral Research Fellow, UT Austin
+  & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
+  Department of Computer Science    
+  & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
+  317 Speedway \\
+  Austin, TX\hspace{0.75em}78712, U.S.A.
 \end{tabular}
 \end{center}
 
