--- a/resume.tex
+++ b/resume.tex
@@ -203,7 +203,7 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \descript{<b>Eric Hayden Campbell</b>, Hossein Hojjat, Nate Foster}
 
 
-\location{OOPSLA|To Appear, Oct 2024}
+\location{OOPSLA|Oct 2024}
 
 
 Capisce computes control plane interface specifications from data plane programs
