--- a/resume.tex
+++ b/resume.tex
@@ -199,6 +199,18 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \section{Selected Publications}
 
 
+\runsubsection{Computing Precise Control Interface Specifications}
+\descript{<b>Eric Hayden Campbell</b>, Hossein Hojjat, Nate Foster}
+
+
+\location{OOPSLA|Oct 2024}
+
+
+Capisce computes control plane interface specifications from data plane programs
+\sectionsep
+
+
+
 \runsubsection{P4Cub: A Little Language for Big Routers}
 \descript{Rudy Peterson, <b>Eric Hayden Campbell</b>, John Chen, Natalie Isak, Calvin Shyu, Ryan Doenges, Parisa Ataei, and Nate Foster}
 
@@ -260,7 +272,7 @@ Extend Kleene Algebra with Tests to model epistemic semantics of modal verbs in 
 
 
 \runsubsection{How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4}
-\descript{Matthias Eichholz, <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini}
+\descript{Matthias Eichholz + <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini}
 
 
 \location{ECOOP|July 2019}
@@ -337,6 +349,8 @@ Developed a construction algorithm for Integer Matrices with Integer Eigenvalues
 \section{Teaching} 
 
 \begin{tabular}{llll}
+  
+    Summer 2023 & Instructor & CS 3 & Jane Street AMP \\
   
     Summer 2022 & Instructor & CS 3 & Jane Street AMP \\
   
