--- a/my-site/cv.tex
+++ b/my-site/cv.tex
@@ -35,16 +35,9 @@
 % Your email address, website, and Skype name are links to send email, open your website and add you on Skype. 
 
 \begin{center}
-  % \begin{tabular}{l l}
-  %   Research Fellow, University of Texas, Austin 
-  %   & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\ 
-  %   Department of Computer Science 
-  %   & \hspace{1in} \href{ericthewry.github.io}{www.ericthewry.github.io} \\
-  %   2515 Speedway, Austin, TX\hspace{0.75em} 78712 \\
-  % \end{tabular}
-\begin{tabular}{l l}
-  Postctoral Research Fellow, UT Austin
-  & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
+  \begin{tabular}{l l}
+  Postdoctoral Research Fellow, UT Austin
+  & \hspace{1in} \href{mailto:eric.hayden.campbell@utexas.edu}{eric.hayden.campbell@utexas.edu} \\
   Department of Computer Science    
   & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
   317 Speedway \\
@@ -63,8 +56,7 @@
   \multicolumn{2}{>{\qquad}l}{%
     \begin{tabular}{l}
       \textbf{Cornell University} \\
-      Ph.D. in Programming Languages, Expected Dec 2024 \\
-      M.Sc. in Computer Science, December 2020 \\
+      Ph.D. in Programming Languages, Dec 2024 \\
     \textbf{Thesis Topic}: Verified Configuration of Programmable Networks \\
     \textit{2019 NSF GRFP Fellow} \\
     \\
