--- a/resume.tex
+++ b/resume.tex
@@ -199,6 +199,18 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \section{Selected Publications}
 
 
+\runsubsection{How I learned to stop worrying and love learned OS policies}
+\descript{Diyanshu Saxena, Jiayi Chen, Sujay Yadalam, Yeonju Ro, Rohit Dwivedula, </br><b>Eric Hayden Campbell</b>, Aditya Akella, Christopher J. Rossbach, Michael Swift}
+
+
+\location{HotOS|May 2025}
+
+
+This paper proposes a way to manage learned os policies using Guardrails
+\sectionsep
+
+
+
 \runsubsection{Computing Precise Control Interface Specifications}
 \descript{<b>Eric Hayden Campbell</b>, Hossein Hojjat, Nate Foster}
 
